@@ -1,3 +1,12 @@
+2007-11-29
+erf and erfc implemented, but rigorous tests and fine tuning
+are not done
+
+floaterf
+- completed functions _erf and _erfc
+floatconst
+- several new constants and working space for the erfc function
+
 2007-11-28
 started implementing the erf function:
 Taylor series for erf
